--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 h1 {
+    display: inline-block;
+    padding: 5px 20px;
     color: orangered;
+    font-family: sans-serif;
+    background-color: black;
+}
+
+p {
+    font-family: sans-serif;
+    font-size: 1.2rem;
 }
